# processcore

./: README.md  gitignore  pyproject.toml
src/processcore/: __main__.py  engine.py  process.py  state.py
tests/: test_cli.py
