[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "processcore"
version = "0.1.0"
description = "Core process execution engine"
readme = "README.md"
requires-python = ">=3.11"

authors = [
  { name="Vladyslav Lazin" }
]

dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
